--- a/Parcial1/Practica3Layout/Layout.css
+++ b/Parcial1/Practica3Layout/Layout.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 
-html.body{
+html,body{
     width: 100%;
     height: 100%;
 }
@@ -34,7 +34,9 @@ html.body{
     height: 10%;
 }
 #piepagina{
-    
+    background-color:chartreuse;
+    width:100%;
+    height:10%;
 }
 
 
